fix: apply all v3 fixes (FIX 1-8)
1. QuestionService.resetTopic - use findBySessionIdAndTopicId
2. MockTestService - remove N+1 findById calls
3. MockTestSession - make private + thread-safe
4. RateLimitFilter - inject ObjectMapper
5. QuestionServiceTest - add required mocks
6. StartMockTestRequest - add Bean Validation
7. getUserStats - use count queries
8. FollowUpRecommenderTest - meaningful assertions

Tests: 27 passing